added pirates scene

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
 $(document).ready(function () {
 
 	//run the nm8 plugin against the target with the path to the xml file
-    $("#app").nm8({screenplay:'scenes/xml/movement.xml'});  
+    $("#app").nm8({screenplay:'scenes/xml/pirates.xml'});  
 
 
 	//optional method of extending the plugin using hardcoded javascript
